Adding DB initializaton script.

--- a/Labyrinth/Labyrinth.csproj
+++ b/Labyrinth/Labyrinth.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DataAccess\InitializeDatabase.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
